--- a/Website_v5/viz2.html
+++ b/Website_v5/viz2.html
@@ -59,6 +59,7 @@
 
 						<div class="width-limited">
 							<h4>Viz2</h4>
+              <img src="Visualisation 2.jpg">
 						</div>
     </div>
 
