--- a/Website_v6/data.html
+++ b/Website_v6/data.html
@@ -47,7 +47,7 @@
 
         <!-- Page Content Holder -->
         <div id="content">
-					<nav class="navbar navbar-expand-lg navbar-light bg-light">
+					<navtop class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
 											<button type="button" id="sidebarCollapse" class="navbar-btn active">
 				                <span></span>
@@ -55,17 +55,32 @@
 				                <span></span>
 				            </button>
                 </div>
-            </nav>
+            </navtop>
 
 						<div class="width-limited">
-							<h4>Francesca Nicoletti</h4>
-							<p>Something about yourself?</p>
+							<h4>Introduction</h4>
+							<p>
+								We have chosen to focus on the dataset, <a href="http://data.un.org/Explorer.aspx">Energy Statistics Database</a>, published by the United Nations Statistics Division on the UNData site.
+								All data and metadata provided on UNdata website are available free of charge and may be copied freely, duplicated and further distributed provided that UNdata is cited as the reference.
+								The Energy Statistics Database has 75 sub-datasets, each grouping information on specific energy fields, such as coal, biodiesel, fuel oil, geothermal, nuclear electricity, etc.
+								It contains comprehensive energy statistics on more than 240 current countries or areas for production, trade, conversion and final consumption of primary and secondary; conventional and non-conventional; and new and renewable sources of energy.
+								More precisely, for a certain energy statistic, these data provide:
+							</p>
 
-							<h4>Vaudaux, Kieran</h4>
-							<p>Something about yourself?</p>
 
-							<h4>Maxime Dulon</h4>
-							<p>Something about yourself?</p>
+							<ul>
+							  <li>Name of the energy statistic</li>
+							  <li>Country or the area from which it comes</li>
+							  <li>Associated year</li>
+								<li>Quantity of that energy statistic</li>
+								<li>Unit in which it is expressed</li>
+								<li>Binary value that informs us whether that quantity is from an estimate or not</li>
+							</ul>
+
+							<p>
+								The data has already been processed and cleaned, the only processing we will have to do on this data is to convert it to a format that suits us better as it is available in .xml format.
+								This dataset is provided with an <a href="https://unstats.un.org/unsd/energystats/questionnaire/documents/Energy-Questionnaire-Guidelines.pdf">annual questionnaire on energy statistics</a>, which provides detailed descriptions of each energy fields and statistics.
+							</p>
 
 						</div>
     </div>
