--- a/Website_v6/index.html
+++ b/Website_v6/index.html
@@ -47,7 +47,7 @@
 
         <!-- Page Content Holder -->
         <div id="content">
-					<nav class="navbar navbar-expand-lg navbar-light bg-light">
+					<navtop class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
 											<button type="button" id="sidebarCollapse" class="navbar-btn active">
 				                <span></span>
@@ -55,12 +55,54 @@
 				                <span></span>
 				            </button>
                 </div>
-            </nav>
+            </navtop>
 
-						<div class="width-limited">
-							<h4>Viz2</h4>
-              <img src="Visualisation 2.jpg">
+							<div class="width-limited">
+								<h4>Introduction</h4>
+								<p>
+								This visualization unveils the deepest mysteries of our world,
+								showing the facts through the lens of statistical data anlysis
+								and colorful animations.
+								The truth shines brightly and guides the lost minds.
+								</p>
+								<p>
+								We investigate the changes in population of alligators in Lac Léman
+								over the last century and extrapolate the trend to predict
+								a world of reptile domination.
+								Read more about the <a href="data.html">sources of our data</a>.
+								</p>
+
+							<h4>Viz1</h4>
+							<p>
+							Description
+							</p>
+
+							<div class="video-container">
+								<a href="viz1.html">
+							    <video autoplay muted loop>
+							    	<source src="world_rotating.mp4" type="video/mp4" />
+							    </video>
+									<div class="caption">
+							    	<h2>Viz1</h2>
+							    </div>
+								</a>
 						</div>
+
+						<h4>Viz2</h4>
+						<p>
+						Description
+						</p>
+
+						<div class="video-container">
+							<a href="viz2.html">
+								<video autoplay muted loop>
+										<source src="wind.mp4" type="video/mp4" />
+								</video>
+								<div class="caption">
+									<h2>Viz2</h2>
+								</div>
+							</a>
+					</div>
     </div>
 
 
