--- a/Website/viz1.html
+++ b/Website/viz1.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Title Website</title>
+    <title>Energy viz</title>
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="sidebar.css">
-    <link rel="stylesheet" href="viz1.css" />
+    <link rel="stylesheet" href="viz1.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/fontawesome.min.css" />
 
@@ -29,11 +29,11 @@
         <!-- Sidebar Holder -->
         <nav id="sidebar" class="active">
             <div class="sidebar-header">
-                <h3>Title sidebar</h3>
+                <h3>Energy visualisation</h3>
             </div>
 
             <ul class="list-unstyled components">
-                <p>Dummy Heading</p>
+                <p>Welcome to our viz</p>
                 <li class="active">
                   <a href="index.html"><i class="fa-solid fa-house"></i></i></i> Home</a>
                   <a href="viz1.html"><i class="fa-solid fa-earth-europe icon"></i> Viz1</a>
