--- a/Website/viz2.html
+++ b/Website/viz2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Title Website</title>
+    <title>Energy viz</title>
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -29,11 +29,11 @@
         <!-- Sidebar Holder -->
         <nav id="sidebar" class="active">
             <div class="sidebar-header">
-                <h3>Title sidebar</h3>
+                <h3>Energy visualisation</h3>
             </div>
 
             <ul class="list-unstyled components">
-                <p>Dummy Heading</p>
+                <p>Welcome to our viz</p>
                 <li class="active">
                   <a href="index.html"><i class="fa-solid fa-house"></i></i></i> Home</a>
                   <a href="viz1.html"><i class="fa-solid fa-earth-europe icon"></i> Viz1</a>
@@ -44,6 +44,7 @@
                 </li>
             </ul>
         </nav>
+
 
         <!-- Page Content Holder -->
         <div id="content">
