--- a/Website/viz1.html
+++ b/Website/viz1.html
@@ -55,6 +55,10 @@
             <button type="button" id="returnMap" class="map-btn"><span>Reset</button>
             <div id="mapholder"></div>
             <div id="countryInfo"></div>
+            <div id="mapInstruction">
+              <span>Click on a country to see stats</span>
+              <button type="button" id="hideInstruction"><span>Hide</button>
+            </div>
             </div>
     </div>
 
