--- a/Website/data.html
+++ b/Website/data.html
@@ -55,6 +55,9 @@
 				                <span></span>
 				                <span></span>
 				            </button>
+                    <div class="page-title">
+                      <span>Data</span>
+                    </div>
                 </div>
             </navtop>
 
