--- a/Website/index.html
+++ b/Website/index.html
@@ -54,12 +54,14 @@
 				                <span></span>
 				                <span></span>
 				                <span></span>
-				            </button>
+				               </button>
+                       <div class="page-title">
+                         <span>Introduction</span>
+                       </div>
                 </div>
             </navtop>
 
 							<div class="width-limited">
-								<h4>Introduction</h4>
 								<p>
 								This visualization unveils the deepest mysteries of our world,
 								showing the facts through the lens of statistical data anlysis
@@ -67,10 +69,8 @@
 								The truth shines brightly and guides the lost minds.
 								</p>
 								<p>
-								We investigate the changes in population of alligators in Lac Léman
-								over the last century and extrapolate the trend to predict
-								a world of reptile domination.
-								Read more about the <a href="data.html">sources of our data</a>.
+								We investigate the energy data around the globe.
+								Read more about the <a href="data.html">data</a>.
 								</p>
 
                 <p>Click on a video to access the visualisation</p>
