--- a/Website/team.html
+++ b/Website/team.html
@@ -54,6 +54,9 @@
 				                <span></span>
 				                <span></span>
 				            </button>
+                    <div class="page-title">
+                      <span>Team</span>
+                    </div>
                 </div>
           </navtop>
 
