--- a/Website/viz2.html
+++ b/Website/viz2.html
@@ -21,6 +21,10 @@
     <script defer src="https://use.fontawesome.com/releases/v6.1.1/js/fontawesome.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v6.1.1/js/brands.js"></script>
 
+    <!-- Bubble chart -->
+    <script src="bubble.js"></script>
+    <script src="https://d3js.org/d3.v6.js"></script>
+
 </head>
 
 <body>
@@ -61,16 +65,54 @@
                 </div>
             </navtop>
 
-						<div class="width-limited">
-							<h4>Viz2</h4>
+            <div class="width-limited">
+              <h4>Viz2</h4>
               <img src="Visualisation 2.jpg">
-						</div>
+            </div>
+
+
+            <div class="flex-container">
+
+              <div class="flex-child magenta">
+                <div id="bubbleChart"></div>
+                <script>bubblesChart()</script>
+              </div>
+
+              <div class="flex-child green">
+                <div>
+                  <label for="estimation">Estimation:</label>
+                  <input type="checkbox" id="estimation" name="estimation"><br><br>
+                </div>
+                <select>
+                      <option value="None">First energy</option>
+                      <option value="Nuclear">Nuclear</option>
+                </select><br><br>
+                <select>
+                      <option value="None">Second energy</option>
+                      <option value="Nuclear">Nuclear</option>
+                </select><br>
+                <select>
+                      <option value="None">Operation</option>
+                      <option value="Difference">Difference</option>
+                </select><br><br><br>
+                <select>
+                      <option value="None">Filter country</option>
+                      <option value="Switzerland">Switzerland</option>
+                </select><br><br>
+                <select>
+                      <option value="None">Highlight country</option>
+                      <option value="Switzerland">Switzerland</option>
+                </select><br><br>
+              </div>
+            </div>
+
+
+
+          </div>
     </div>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://d3js.org/d3.v6.js"></script>
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="sidebar.js"></script>
     <!-- jQuery CDN - Slim version (=without AJAX) -->
