--- a/Website/index.html
+++ b/Website/index.html
@@ -58,51 +58,64 @@
                        <div class="page-title">
                          <span>Introduction</span>
                        </div>
+                       <button type="button" id="skipIntro" class="intro-btn"><span>Skip intro</button>
                 </div>
             </navtop>
 
-							<div class="width-limited">
-								<p>
-								This visualization unveils the deepest mysteries of our world,
-								showing the facts through the lens of statistical data anlysis
-								and colorful animations.
-								The truth shines brightly and guides the lost minds.
-								</p>
-								<p>
-								We investigate the energy data around the globe.
-								Read more about the <a href="data.html">data</a>.
-								</p>
+              <button type="button" id="startIntro" class="intro-btn"><span>Start experience</button>
 
-                <p>Click on a video to access the visualisation</p>
-
-              <div class="flex-container">
-
-                <div class="flex-child magenta">
-                  <div class="video-container">
-    								<a href="viz1.html">
-    							    <video autoplay muted loop>
-    							    	<source src="world_rotating.mp4" type="video/mp4" />
-    							    </video>
-    									<div class="caption">
-    							    	<p>Viz1</p>
-    							    </div>
-    								</a>
-    						</div>
+  						<div class="width-limited">
+                <div id="intro_text1">
+  								<p>
+  								This visualization unveils the deepest mysteries of our world,
+  								showing the facts through the lens of statistical data anlysis
+  								and colorful animations.
+  								The truth shines brightly and guides the lost minds.
+  								</p>
                 </div>
 
-                <div class="flex-child green">
-                  <div class="video-container">
-      							<a href="viz2.html">
-      								<video autoplay muted loop>
-      										<source src="wind.mp4" type="video/mp4" />
-      								</video>
-      								<div class="caption">
-      									<p>Viz2</p>
-      								</div>
-      							</a>
-      					 </div>
+                <div id="intro_text2">
+  								<p>
+  								We investigate the energy data around the globe.
+  								Read more about the <a href="data.html">data</a>.
+  								</p>
                 </div>
+
+
+                <div id="intro_text3">
+                  <p>Click on a video to access the visualisation</p>
+                </div>
+
+                <div class="flex-container" id="intro_video">
+
+                  <div class="flex-child magenta">
+                    <div class="video-container">
+      								<a href="viz1.html">
+      							    <video autoplay muted loop>
+      							    	<source src="world_rotating.mp4" type="video/mp4" />
+      							    </video>
+      									<div class="caption">
+      							    	<p>Viz1</p>
+      							    </div>
+      								</a>
+      						 </div>
+                  </div>
+
+                  <div class="flex-child green">
+                    <div class="video-container">
+        							<a href="viz2.html">
+        								<video autoplay muted loop>
+        										<source src="wind.mp4" type="video/mp4" />
+        								</video>
+        								<div class="caption">
+        									<p>Viz2</p>
+        								</div>
+        							</a>
+        					 </div>
+                  </div>
               </div>
+            </div>
+          </div>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -110,6 +123,7 @@
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="sidebar.js"></script>
+    <script src="index.js"></script>
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Popper.JS -->
