--- a/Website/viz1.html
+++ b/Website/viz1.html
@@ -21,10 +21,19 @@
     <script defer src="https://use.fontawesome.com/releases/v6.1.1/js/fontawesome.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v6.1.1/js/brands.js"></script>
 
-    <!-- Sankey chart -->
+    <!-- Sankey chart
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="sankey.js"></script>
-    <script src="https://unpkg.com/d3-sankey@0.12.3/dist/d3-sankey.min.js"></script>
+    <script src="https://unpkg.com/d3-array@3"></script>
+    <script src="https://unpkg.com/d3-collection@1"></script>
+    <script src="https://unpkg.com/d3-path@1"></script>
+    <script src="https://unpkg.com/d3-shape@1"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+    <script src="https://unpkg.com/d3-sankey@0.12.3"></script>
+    <script>
+      var d3Sankey = d3.sankey();
+      //console.log(d3Sankey);
+    </script>
+
 
 </head>
 
@@ -59,9 +68,7 @@
             </button>
             <button type="button" id="returnMap" class="map-btn"><span>Reset</button>
             <div id="mapholder"></div>
-            <div id="countryInfo">
-              <div id="chart"></div>
-            </div>
+            <div id="countryInfo"></div>
             <div id="mapInstruction">
               <span>Click on a country to see stats</span>
               <button type="button" id="hideInstruction"><span>Hide</button>
@@ -78,6 +85,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script type="text/javascript" src="countries.js"></script>
     <script src="myscript.js"></script>
+    <script src="sankey2.js"></script>
     <script src="sidebar.js"></script>
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
