--- a/Website/viz1.html
+++ b/Website/viz1.html
@@ -31,7 +31,6 @@
     <script src="https://unpkg.com/d3-sankey@0.12.3"></script>
     <script>
       var d3Sankey = d3.sankey();
-      //console.log(d3Sankey);
     </script>
 
 
@@ -69,6 +68,14 @@
             <button type="button" id="returnMap" class="map-btn"><span>Reset</button>
             <div id="mapholder"></div>
             <div id="countryInfo"></div>
+            <div id="legend">
+              <p> Legend </p>
+              <div class="slidecontainer" id="slider1">
+                <input type="range" value="2020" min="1980" max="2020" oninput="this.nextElementSibling.value = this.value" class="slider" id="myRange">
+                <output name="DateValue" id="myRange">2021</output>
+              </div>
+            </div>
+
             <div id="mapInstruction">
               <span>Click on a country to see stats</span>
               <button type="button" id="hideInstruction"><span>Hide</button>
@@ -84,8 +91,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script type="text/javascript" src="countries.js"></script>
-    <script src="myscript.js"></script>
-    <script src="sankey2.js"></script>
+    <script src="viz1.js"></script>
+    <script src="sankey.js"></script>
     <script src="sidebar.js"></script>
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
