Update working viz 1 and 2 + update text pages

--- a/Website/index.html
+++ b/Website/index.html
@@ -67,23 +67,37 @@
   						<div class="width-limited">
                 <div id="intro_text1">
   								<p>
-  								This visualization unveils the deepest mysteries of our world,
-  								showing the facts through the lens of statistical data anlysis
-  								and colorful animations.
-  								The truth shines brightly and guides the lost minds.
+                    Energy is a very important topic nowadays so we
+                    thought this could be interesting to develop a visual
+                    representation of energy related <a href="data.html">data</a>.
+                    We also want to give a global and complete vision of the world energy
+                    network.
   								</p>
                 </div>
 
                 <div id="intro_text2">
   								<p>
-  								We investigate the energy data around the globe.
-  								Read more about the <a href="data.html">data</a>.
+                    What are the energy exchanges between countries ? Which types of energy are most present,
+                    in which countries and the diversification over time?
+                    <br><br>
+                    In what areas are the different types of energy used? How does this evolve over time and how
+                    does it differ according to the wealth of the countries for example? Are the most developed
+                    countries more advanced in the production of renewable energy?
   								</p>
                 </div>
 
 
                 <div id="intro_text3">
-                  <p>Click on a video to access the visualisation</p>
+                  <p>
+                    We target audience in the following way: someone interested in knowing more about the energy network.
+                    The visualization must be adapted to an audience not educated on the subject.
+                    The idea is to have the audience discover the subject in its globally first, then to have an
+                    interactive format to deepen some points.
+                    <br>
+                    The main point of our visualization is that it will show a global graphical overview of energy related
+                    quantities and one can find more information by interacting with the map to have more detailed knowledge about specific data.
+                    <br><br>
+                    Click on a video to access the visualisation</p>
                 </div>
 
                 <div class="flex-container" id="intro_video">
