--- a/Website/viz1.html
+++ b/Website/viz1.html
@@ -69,11 +69,15 @@
             <div id="mapholder"></div>
             <div id="countryInfo"></div>
             <div id="legend">
-              <p> Legend </p>
-              <div class="slidecontainer" id="slider1">
-                <input type="range" value="2020" min="1980" max="2020" oninput="this.nextElementSibling.value = this.value" class="slider" id="myRange">
-                <output name="DateValue" id="myRange">2021</output>
-              </div>
+              <h4> Legend </h4><br><br>
+              <span class="dot" id="HB"></span>Heavy estimation
+              <br><br>
+              <span class="dot" id="MB"></span>Medium estimation
+              <br><br>
+              <span class="dot" id="LB"></span>Small estimation
+              <br><br>
+              <span class="dot" id="VLB"></span>No estimation
+              <br><br>
             </div>
 
             <div id="mapInstruction">
