--- a/Website/team.html
+++ b/Website/team.html
@@ -70,16 +70,20 @@
 							<h4>Francesca Paola Nicoletti</h4>
 							<p>
                 I am a student in the second year of a master's degree in Mechanical Engineering with a specialization in
-                Design and Production and a minor in Data Science. I am more and more interested in sustainability topics.
-                 Raising public awareness of sustainability issues is an essential issue in today's world, it is the first lever
-                 for everyone to start taking action. It is also essential to understand the geopolitical issues surrounding the
-                 theme of energy in order to move towards a socially and economically viable energy transition. We have designed
-                 this site for informational purposes concerning these topics.
+                Design and Production and a minor in Data Science.
               </p>
 
 							<h4>Kieran Vaudaux</h4>
 							<p>
                 I am a student in the first year of a master's degree in Mathematics and a minor in Data Science.
+              </p>
+              <br><br>
+
+              <p>
+                We are more and more interested in sustainability topics. Raising public awareness of sustainability issues is an essential
+                issue in today's world, it is the first lever for everyone to start taking action. It is also essential to understand the
+                geopolitical issues surrounding the theme of energy in order to move towards a socially and economically viable energy transition.
+                We have designed this site for informational purposes concerning these topics.
               </p>
 
 						</div>
