Comments in code

--- a/Website/index.html
+++ b/Website/index.html
@@ -65,6 +65,9 @@
               <button type="button" id="startIntro" class="intro-btn"><span>Start experience</button>
 
   						<div class="width-limited">
+
+                <!-- Create 3 different parts to load them consecutively with a delay -->
+
                 <div id="intro_text1">
   								<p>
                     Energy is a very important topic nowadays so we
