--- a/Website/viz1.html
+++ b/Website/viz1.html
@@ -66,9 +66,9 @@
                 <span></span>
             </button>
             <button type="button" id="returnMap" class="map-btn"><span>Reset</button>
-            <div id="mapholder"></div>
-            <div id="countryInfo"></div>
-            <div id="legend">
+            <div id="mapholder"></div> <!-- Map holder -->
+            <div id="countryInfo"></div> <!-- Viz1 holder -->
+            <div id="legend"> <!-- Legend holder -->
               <h4> Legend </h4><br><br>
               <span class="dot" id="HB"></span>Heavy estimation
               <br><br>
