--- a/Website/viz2.html
+++ b/Website/viz2.html
@@ -151,7 +151,7 @@
 
             <button type="button" id="StartViz2" class="intro-btn"><span>Start vizualisation</button>
 
-            <div id="bubbleChart"></div>
+            <div id="bubbleChart"></div> <!-- Viz2 holder -->
 
           </div>
     </div>
